<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_tv_shows"
    android:background="@color/black"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.DetailTVShowActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/img_poster"
                android:layout_width="413dp"
                android:layout_height="357dp"
                android:src="@drawable/loading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/ic_play"
                android:layout_width="142dp"
                android:layout_height="153dp"
                android:src="@drawable/ic_baseline_play_circle_outline_24"
                app:layout_constraintBottom_toBottomOf="@+id/img_poster"
                app:layout_constraintEnd_toEndOf="@+id/img_poster"
                app:layout_constraintStart_toStartOf="@+id/img_poster"
                app:layout_constraintTop_toTopOf="@+id/img_poster" />

            <TextView
                android:id="@+id/tvShow_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textColor="@color/white"
                android:textSize="28sp"
                android:textStyle="bold"
                android:ellipsize="end"
                android:layout_marginTop="28dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_poster"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/tvShow_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="16dp"
                android:text="@string/rate"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/img_rate"
                app:layout_constraintTop_toBottomOf="@+id/tvShow_description" />

            <Button
                android:id="@+id/btn_watch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="5dp"
                android:backgroundTint="@color/red"
                android:text="@string/watch_now"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvShow_rate" />

            <TextView
                android:id="@+id/tvShow_release"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/time_release"
                android:textColor="@color/grey"
                android:layout_marginTop="10dp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvShow_title"/>

            <TextView
                android:id="@+id/tvShow_description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:ellipsize="end"
                android:textColor="@color/white"
                android:textSize="14sp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="10dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvShow_release"
                app:layout_constraintEnd_toEndOf="parent"/>

            <ImageView
                android:id="@+id/img_rate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:src="@drawable/ic_baseline_star_24"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tvShow_description" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>