<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/movie_menu"
        android:icon="@drawable/ic_baseline_local_movies_24"
        android:title="@string/movies" />

    <item
        android:id="@+id/favorite_menu"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/favorite" />

</menu>