<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/btn_share"
        app:showAsAction="always"
        android:icon="@drawable/share"
        android:title="@string/share" />

    <item
        android:id="@+id/btn_fav"
        app:showAsAction="ifRoom"
        android:icon="@drawable/state_favorite"
        android:title="@string/favorite" />
</menu>